Styles update, update layout in LTI slide, fixed overlapping loader bug in comments
Lti slide min height is 100vh to fill all window without white lines
No more title/comments/footer in LTI slide
Removed box shadow in exercise status

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -48,9 +48,11 @@
 .rootWrapper.withoutNavigation {
   position: relative;
 
+  min-height: 100vh;
   width: 100%;
   max-width: 100vw;
 
+  padding: 0;
   margin: 0;
 
   .slide {
