--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -308,7 +308,7 @@
 	border: 1px solid #E5E5E5;
 	border-radius: 8px;
 	height: auto;
-	margin-bottom: 15px;
+	margin-bottom: 1em;
 	line-height: 1.3em;
 	font-size: 14px;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
@@ -610,10 +610,6 @@
 .legacy-page .exercise-loading {
 	margin-bottom: 0;
 	margin-top: 10px;
-}
-
-.legacy-page .exercise-block-status {
-	box-shadow: inset 0 -10px 10px -10px #9cbdce;
 }
 
 .legacy-page .exercise-block-status.wrong {
